# database

./: .gitignore  README.md  deploy-complete.sh  docker-compose.frontend.yml  docker-compose.yml  local-dev.sh  pyproject.toml
.github/: copilot-instructions.md
backend/: create_zip_file.sh
backend/functions/: utils.py
backend/functions/query_processor/: lambda_function.py
backend/functions/result_enhancer/: lambda_function.py
backend/functions/search_engine/: lambda_function.py
backend/local-dev/: Dockerfile  app.py
data/: activities.json  database_dump.csv  get_data_json.py  unique_tags.json
docs/: google-analytics-setup.md  project_specification.md
frontend/: .env.example  .env.hybrid  ANALYTICS_INTEGRATION.md  Dockerfile.prod  HYBRID_SETUP.md  LOCAL_TESTING.md  package-lock.json  package.json  vercel.json
frontend/api/: activities.js
frontend/local-dev/: Dockerfile  Dockerfile.hybrid
frontend/public/: index.html  manifest.json
frontend/public/data/: activities_protected.json  unique_tags.json
frontend/scripts/: dataDecryption.js  deploy.sh  generateStaticPages.js  processData.js
frontend/src/: App.css  App.js  index.css
frontend/src/components/: AboutPage.css  AboutPage.js  ActivityPage.css  ActivityPage.js  ActivityPanel.css  ActivityPanel.js  ActivityResult.css  (+9 more)
infrastructure/cdk/: README.md
infrastructure/cloudformation/: deploy.sh  template.yaml
infrastructure/terraform/: README.md  main.tf  outputs.tf  providers.tf  variables.tf
local-dev/mock-openai/: Dockerfile
local-env/: Dockerfile  app.py  send_request_openai.py
(+4 files in other folders)
